TWINS-343: [cache] create findEntitySafeCached method in EntitySecureFindServiceImpl service